testsuite/tests/rename/should_fail/T22581b.hs
{-# LANGUAGE ExplicitNamespaces #-}

module T22581b where

import T22581b_helper (T(type MkT1, MkT2, MkT3, unT))

