testsuite/tests/rename/should_fail/T22581b.stderr
T22581b.hs:5:24: error: [GHC-51433]
    In the import of ‘T22581b_helper’:
      a data type called ‘T’ is exported,
      but its subordinate item ‘MkT1’ is not in the type namespace.
    Suggested fix:
      Remove the ‘type’ keyword from the subordinate import item:
        import T22581b_helper ( T ( MkT1 ) )

T22581b.hs:5:24: error: [GHC-10237]
    In the import of ‘T22581b_helper’:
      a data type called ‘T’ is exported, but it does not export
      any constructors or record fields called ‘MkT3’, ‘unT’.

